feat: add meta data

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tweet Counter Static</title>
+    <meta name="description" content="Count tweets from tweet activity metrics" />
+    <meta name="author" content="Ryoga.exe" />
+    <!-- <meta name="image" content="/og-image.png" /> -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Tweet Counter" />
+    <meta property="og:title" content="Tweet Counter" />
+    <meta property="og:description" content="Count tweets from tweet activity metrics" />
+    <meta property="og:url" content="https://repos.ryoga.dev/tweet-counter-static" />
+    <meta property="og:locale" content="ja_JP" />
+    <!-- <meta property="og:image" content="/og-image.png" /> -->
+    <!-- <meta property="og:image:alt" content="Tweet Counter" /> -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Ryoga_exe" />
+    <meta name="twitter:creator" content="@Ryoga_exe" />
+    <meta name="twitter:title" content="Tweet Counter" />
+    <meta name="twitter:description" content="Count tweets from tweet activity metrics" />
+    <!-- <meta name="twitter:image" content="/og-image.png" /> -->
+    <title>Tweet Counter</title>
   </head>
   <body>
     <div id="root"></div>
